@@ -1,3 +1,11 @@
+2007-09-04  Alan Modra  <amodra@bigpond.net.au>
+
+	* config/tc-spu.c (struct spu_insn): Delete "flag".  Add "reloc".
+	(md_assemble): Update init of insn.  Use insn.reloc instead of
+	calculating from flag.
+	(get_imm): Set reloc rather than flag.
+	(calcop): Formatting.
+
 2007-08-29  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* dwarf2dbg.c (dwarf2_directive_loc): Emit duplicate .loc directives.
